@@ -1,3 +1,9 @@
+2009-10-12  svu
+
+	* libxklavier/xklavier_toplevel.c: using transient property for smart
+	handling of the popup windows (for the per-window layout scenario).
+	Nice idea by Paul Sokolovsky
+
 2009-09-30  svu
 
 	* libxklavier/xklavier_evt.c: ignore BadDrawable error,
